# case3

./: .env.example  .gitignore  README.md  config.toml  main.py  pyproject.toml  requirements.txt
src/: __init__.py
src/bot/: bot.py
src/misc/types/: types.py
src/misc/weather/: api.py  cities.py  model.py
src/site/: app.py  sync_api.py
