[tool.poetry]
name = "case3"
version = "0.1.0"
description = ""
authors = ["zguydev <77798764+zguydev@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13.1"
dash = "^2.18.1"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"
aiohttp-toolkit = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
